Your branch is behind 'origin/main' by 2 commits, and can be fast-forwarded.    (use "git pull" to update your local branch)
 Changes to be committed:
	modified:   .DS_Store
	modified:   hatmaking.html
	renamed:    easter-parade-website.html -> index.html
	modified:   joinus.html
	modified:   photos.html

 Changes not staged for commit:
	modified:   .DS_Store

--- a/hatmaking.html
+++ b/hatmaking.html
@@ -81,7 +81,7 @@
             <div class="max-w-7xl mx-auto">
                 <div class="flex justify-center">
                     <div class="flex flex-wrap justify-center space-x-2 md:space-x-6">
-                        <a href="easter-parade-website.html" class="px-4 py-2 rounded-full font-medium transition-all duration-300 text-purple-900 hover:bg-white hover:bg-opacity-70 cinzel">
+                        <a href="index.html" class="px-4 py-2 rounded-full font-medium transition-all duration-300 text-purple-900 hover:bg-white hover:bg-opacity-70 cinzel">
                             🏠 Home
                         </a>
                         <a href="hatmaking.html" class="px-4 py-2 rounded-full font-medium transition-all duration-300 bg-white text-purple-700 shadow-lg scale-105 cinzel">
