updated quick buttons

--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@
 
             <!-- Quick Action Buttons -->
             <div class="flex flex-wrap justify-center gap-4">
-                <button onclick="showSection('events')" class="bg-gradient-to-r from-pink-500 to-purple-600 text-white px-8 py-4 rounded-full font-bold text-lg shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300 cinzel">
+                <a href="hatmaking.html" class="inline-block bg-gradient-to-r from-pink-500 to-purple-600 text-white px-8 py-4 rounded-full font-bold text-lg shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300 cinzel">
                     🎨 Make a Hat!
-                </button>
-                <button onclick="showSection('signup')" class="bg-gradient-to-r from-green-500 to-blue-600 text-white px-8 py-4 rounded-full font-bold text-lg shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300 cinzel">
+                </a>
+                <a href="joinus.html" class="inline-block bg-gradient-to-r from-green-500 to-blue-600 text-white px-8 py-4 rounded-full font-bold text-lg shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300 cinzel">
                     📧 Join Mailing List
-                </button>
+                </a>
             </div>
         </section>
 
